<resources>
    <string name="app_name">Just Movies</string>
    <string name="action_settings">Settings</string>
    <string name="default_error">Loading Error</string>
    <string name="tab_now_playing">NOW PLAYING</string>
    <string name="tab_popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="upcoming">UPCOMING</string>

    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailers</string>

    <string name="movie_rating">Rating: %s</string>
    <string name="movie_details_toolbar">Movie \'%s\' details</string>
    <string name="movie_duration">%s h %s min</string>
    <string name="movie">%s (%s)</string>
    <string name="backdrop">Backdrop</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="information">Information</string>
    <string name="na_string">N/A</string>
    <string name="transaction_name">movie_transation</string>
    <string name="cast_image">Actor Photo</string>
    <string name="cast">Cast</string>
    <string name="action_search">Search</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="people">People</string>
    <string name="no_results_found">No results found</string>
    <string name="search_movie_transaction">search_movie_transaction</string>
</resources>
